--- a/Starbucks.ipynb
+++ b/Starbucks.ipynb
@@ -854,7 +854,7 @@
     "    Output value:\n",
     "        ci: Tuple indicating lower and upper bounds of bootstrapped\n",
     "            confidence interval\n",
-    "        sample_metrics list list of sampled quantiles \n",
+    "        sample_metrics list of samples \n",
     "    \"\"\"\n",
     "    \n",
     "    # initialize storage of bootstrapped sample quantiles\n",
